--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.16",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
