--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "pdfkit": "^0.16.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
